--- a/configs/config_16B.json
+++ b/configs/config_16B.json
@@ -15,5 +15,6 @@
     "qk_nope_head_dim": 128,
     "qk_rope_head_dim": 64,
     "v_head_dim": 128,
-    "mscale": 0.707
+    "mscale": 0.707,
+    "dtype": "int8"
 }
