--- a/configs/config_debug.json
+++ b/configs/config_debug.json
@@ -18,5 +18,14 @@
     "qk_nope_head_dim": 128,
     "qk_rope_head_dim": 64,
     "v_head_dim": 128,
-    "dtype": "int8"
+    "fp8_quant_block_size": 128,
+    "max_batch_size": 128,
+    "max_seq_len": 2048,
+    "dtype": "int8",
+    "gemm_impl": "naive",
+    "attn_impl": "absorb",
+    "max_new_tokens": 100,
+    "temperature":0,
+    "offload_cpu": true,
+    "use_random_weights": true
 }
