增加对int4量化的打包和支持

--- a/configs/config_debug.json
+++ b/configs/config_debug.json
@@ -21,8 +21,8 @@
     "fp8_quant_block_size": 128,
     "max_batch_size": 128,
     "max_seq_len": 2048,
-    "dtype": "int8",
-    "gemm_impl": "naive",
+    "dtype": "int4",
+    "gemm_impl": "bf16",
     "attn_impl": "absorb",
     "max_new_tokens": 100,
     "temperature":0,
