--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,11 +38,11 @@
             },
             "cwd": "${workspaceFolder}",
             "args": [
-                "--nproc_per_node", "8",
-                "--nnodes", "1",
-                "--node_rank", "0",
-                "--master_addr", "localhost",
-                "--master_port", "6000",
+                "--nproc_per_node=8",
+                "--nnodes=1",
+                "--node_rank=0",
+                "--master_addr=localhost",
+                "--master_port=6000",
                 "inference.py",
                 "--ckpt-path=ckpt",
                 "--config-path=configs/config_debug.json",
