--- a/configs/config_671B.json
+++ b/configs/config_671B.json
@@ -19,10 +19,10 @@
     "qk_rope_head_dim": 64,
     "v_head_dim": 128,
     "fp8_quant_block_size": 128,
-    "max_batch_size": 128,
-    "max_seq_len": 2048,
-    "dtype": "int8",
-    "gemm_impl": "naive",
+    "max_batch_size": 8,
+    "max_seq_len": 512,
+    "dtype": "int4",
+    "gemm_impl": "bf16",
     "attn_impl": "absorb",
     "max_new_tokens": 100,
     "temperature": 0,
