--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,7 +47,8 @@
                 "--ckpt-path=ckpt",
                 "--config-path=configs/config_debug.json",
                 "--startup-type=scripts/inputs.txt",
-                "--model-name=deepseek_v3"
+                "--model-name=deepseek_pp",
+                "--pp-layer-list=17,15,15,14"
             ]
         },
     ]
