--- a/configs/config_671B.json
+++ b/configs/config_671B.json
@@ -20,6 +20,7 @@
     "v_head_dim": 128,
     "fp8_quant_block_size": 128,
     "max_batch_size": 128,
+    "mini_batch_size": 16,
     "max_seq_len": 2048,
     "dtype": "int4",
     "gemm_impl": "naive",
